--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,3 +15,10 @@ jobs:
         run: |
           sudo npm install -g markdownlint-cli
           markdownlint *.md
+  update-check:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Check that update script is not cause any errors
+        run: |
+          bash update.sh
