--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,6 +19,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - name: Create some file for update check
+        run: |
+          touch /var/www/html/mediawiki/LocalSettings.php
+          mkdir -pv /var/www/html/mediawiki/images/
+          mkdir -pv /var/www/html/mediawiki/extensions/
+          mkdir -pv /var/www/html/mediawiki/resources/assets/
       - name: Check that update script is not cause any errors
         run: |
           bash update.sh
