--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,6 +21,7 @@ jobs:
       - uses: actions/checkout@v2
       - name: Create some file for update check
         run: |
+          mkdir -pv /var/www/html/mediawiki/
           touch /var/www/html/mediawiki/LocalSettings.php
           mkdir -pv /var/www/html/mediawiki/images/
           mkdir -pv /var/www/html/mediawiki/extensions/
