--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,7 +21,8 @@ jobs:
       - uses: actions/checkout@v2
       - name: Create some file for update check
         run: |
-          sudo mkdir -pv -m 777 /var/www/html/mediawiki/
+          sudo mkdir -pv -m 777 /var/www/html/mediawiki-0.0.0
+          ln -s /var/www/html/mediawiki-0.0.0 /var/www/html/mediawiki
           touch /var/www/html/mediawiki/LocalSettings.php
           mkdir -pv /var/www/html/mediawiki/images/
           mkdir -pv /var/www/html/mediawiki/extensions/
